# fundamentus-data-API

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  RELEASING.md  SECURITY.md  cliff.toml  docker-compose.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: changelog.yml  ci.yml  release-pr.yml  release.yml
app/: __init__.py  main.py
app/api/: dependencies.py  routes.py
app/cache/: __init__.py  store.py
app/config/: settings.py
app/core/: errors.py  metrics.py  time.py
app/models/: __init__.py  assets.py  fixed_income.py  historical_quotes.py
app/parsers/: __init__.py  details.py  dividends.py  normalizers.py
app/scrapers/: __init__.py  anbima_fixed_income.py  b3_historical_quotes.py  fundamentus.py
app/services/: __init__.py  assets.py  fixed_income.py  historical_quotes.py  market.py  opportunity.py  singleflight.py
app/tests/: conftest.py  test_fixed_income.py  test_historical_quotes.py  test_market.py  test_normalizers.py  test_opportunity.py  test_parsers.py  test_service_and_api.py
app/tests/fixtures/: hglg11_details.html  hglg11_dividends.html  itub4_details.html  itub4_dividends.html  wege3_details.html  wege3_dividends.html
docs/: API.md  ARCHITECTURE.md
scripts/: benchmark.py  release_notes.py  sync_release_version.py
